fix unsafe Issues2